--- a/Security/package.json
+++ b/Security/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "qrcode.react": "^3.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qr-reader": "^2.2.1",
+    "react-router-dom": "^6.30.2",
+    "react-toastify": "^10.0.6",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
